# Mondrian

./: Cargo.toml  README  README.md  README_zh-CN.md  flake.nix  set_up.sh
configs/: keybindings.conf  mondrian.conf  workspace.conf
configs/Mondrian/: keybindings.conf  mondrian.conf  windowrules.conf
configs/fish/: config.fish
configs/kitty/: kitty.conf
configs/rofi/styles/: style.rasi
configs/waybar/: config.jsonc  style.css
configs/waybar/modules/: clock.jsonc  custom.jsonc  hyprland.jsonc  memory.jsonc  modules.jsonc  network.jsonc  pulseaudio.jsonc
resource/: cursor.rgba  rofilaunch.sh  screen_copy.sh  swww_launch.sh
src/: main.rs  state.rs  xdg_shell.rs
src/animation/: mod.rs
src/backend/: mod.rs  tty.rs  winit.rs
src/config/: group.json  keybinding.rs  keybindings.conf  mod.rs  mondrian.conf  windowrules.rs  workspace.rs
src/handler/: compositor.rs  mod.rs  xdg_shell.rs
src/input/: focus.rs  input.rs  keybindings.rs  keyboard.rs  mod.rs  move_grab.rs  pointer.rs  resize_grab.rs
src/layout/: container_tree.rs  json_tiled_tree.rs  mod.rs  neighbor_graph.rs  tiled_tree.rs  workspace.rs
src/logs/: app.log.2025-06-20
src/manager/: animation.rs  cursor.rs  input.rs  mod.rs  output.rs  render.rs  window.rs  workspace.rs
src/protocol/: compositor.rs  foreign_toplevel.rs  layer_shell.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/render/: background.rs  border.rs  cursor.rs  elements.rs  mod.rs  render_elements.rs  renders.rs
src/render/shaders/: background.frag  background_2.frag  background_4_slow.frag  background_dark2.frag  background_light.frag  border.frag  frame.frag
src/space/: mod.rs  output.rs  window.rs  workspace.rs
src/utils/: errors.rs
test/glmark2/: hyprland.txt  tty.txt  winit.txt
wiki/: Mondrian.typ  PPT&Video.md  introduce.md  layout.md  log.md  ref.bib  smithay.md  tty.md  wayland-protocol.md
wiki/Smithay/: smithay.md
wiki/test/: heaptrack.mondrian.180783.zst
